--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -63,7 +63,7 @@ spec:
           args:
             - --leader-elect
             - --health-probe-bind-address=:8081
-            - --log-level info
+            - --log-level=info
           image: controller:latest
           name: manager
           ports: []
