--- a/config/crd/bases/maxtac.vtk.io_accesses.yaml
+++ b/config/crd/bases/maxtac.vtk.io_accesses.yaml
@@ -110,9 +110,6 @@ spec:
             description: AccessStatus defines the observed state of Access.
             properties:
               conditions:
-                description: |-
-                  INSERT ADDITIONAL STATUS FIELD - define observed state of cluster
-                  Important: Run "make" to regenerate code after modifying this file
                 items:
                   description: Condition contains details for one aspect of the current
                     state of this API Resource.
@@ -166,6 +163,30 @@ spec:
                   - reason
                   - status
                   - type
+                  type: object
+                type: array
+              netpols:
+                items:
+                  properties:
+                    name:
+                      type: string
+                    namespace:
+                      type: string
+                  required:
+                  - name
+                  - namespace
+                  type: object
+                type: array
+              services:
+                items:
+                  properties:
+                    name:
+                      type: string
+                    namespace:
+                      type: string
+                  required:
+                  - name
+                  - namespace
                   type: object
                 type: array
             type: object
