--- a/config/crd/bases/maxtac.vtk.io_externalaccesses.yaml
+++ b/config/crd/bases/maxtac.vtk.io_externalaccesses.yaml
@@ -101,9 +101,6 @@ spec:
             description: ExternalAccessStatus defines the observed state of ExternalAccess.
             properties:
               conditions:
-                description: |-
-                  INSERT ADDITIONAL STATUS FIELD - define observed state of cluster
-                  Important: Run "make" to regenerate code after modifying this file
                 items:
                   description: Condition contains details for one aspect of the current
                     state of this API Resource.
@@ -157,6 +154,30 @@ spec:
                   - reason
                   - status
                   - type
+                  type: object
+                type: array
+              netpols:
+                items:
+                  properties:
+                    name:
+                      type: string
+                    namespace:
+                      type: string
+                  required:
+                  - name
+                  - namespace
+                  type: object
+                type: array
+              services:
+                items:
+                  properties:
+                    name:
+                      type: string
+                    namespace:
+                      type: string
+                  required:
+                  - name
+                  - namespace
                   type: object
                 type: array
             type: object
