--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -2,6 +2,8 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
+  - bases/maxtac.vtk.io_clusteraccesses.yaml
+  - bases/maxtac.vtk.io_clusterexternalaccesses.yaml
   - bases/maxtac.vtk.io_accesses.yaml
   - bases/maxtac.vtk.io_externalaccesses.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
