--- a/config/samples/maxtac_v1alpha1_clusterexternalaccess.yaml
+++ b/config/samples/maxtac_v1alpha1_clusterexternalaccess.yaml
@@ -1,5 +1,5 @@
 apiVersion: maxtac.vtk.io/v1alpha1
-kind: ExternalAccess
+kind: ClusterExternalAccess
 metadata:
   labels:
     app.kubernetes.io/name: maxtac
