feat ✨: add expiration timer, fix externalaccess naming
Signed-off-by: Victor Hang <vhvictorhang@gmail.com>

--- a/config/crd/bases/maxtac.vtk.io_clusteraccesses.yaml
+++ b/config/crd/bases/maxtac.vtk.io_clusteraccesses.yaml
@@ -41,6 +41,8 @@ spec:
             properties:
               direction:
                 type: string
+              duration:
+                type: string
               mirrored:
                 type: boolean
               serviceSelector:
@@ -165,6 +167,9 @@ spec:
                   - type
                   type: object
                 type: array
+              expirationTimestamp:
+                format: date-time
+                type: string
               netpols:
                 items:
                   properties:
