--- a/config/crd/bases/maxtac.vtk.io_clusterexternalaccesses.yaml
+++ b/config/crd/bases/maxtac.vtk.io_clusterexternalaccesses.yaml
@@ -42,6 +42,8 @@ spec:
             properties:
               direction:
                 type: string
+              duration:
+                type: string
               serviceSelector:
                 description: |-
                   A label selector is a label query over a set of resources. The result of matchLabels and
@@ -158,6 +160,9 @@ spec:
                   - type
                   type: object
                 type: array
+              expirationTimestamp:
+                format: date-time
+                type: string
               netpols:
                 items:
                   properties:
